# unibot_agent

./: .dockerignore  .gitignore  README.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
docs/: deploy.md  development.md
indexer/: .env.example  Dockerfile  pyproject.toml
indexer/indexer/: chunker.py  config.py  embedder.py  main.py  qdrant_client.py  reindex.py
indexer/indexer/parsers/: __init__.py  html_parser.py  pdf_parser.py  text_parser.py
indexer/indexer/static/: index.html
infra/ansible/: README.md  ansible.cfg  deploy.yml  inventory.yml  rollback.yml  vars.yml.example
infra/ansible/templates/: env.j2
infra/monitoring/grafana/dashboards/: unibot.json  web-gui.json
infra/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infra/monitoring/prometheus/: alerts.yml  prometheus.yml
infra/nginx/: nginx.conf
log-viewer/: .env.example  Dockerfile  pyproject.toml
log-viewer/app/: config.py  docker_client.py  log_streamer.py  main.py  metrics.py
log-viewer/static/: index.html
log-viewer/static/css/: style.css
log-viewer/static/js/: api.js  app.js  containers.js  logs.js  utils.js
log-viewer/tests/: conftest.py  test_config.py  test_log_streamer.py  test_main.py
shared/: docx_builder.py  pyproject.toml
tests/llm-judge/: 01-relevant-rag.md  02-reasoning.md  03-off-topic.md  04-meta-provocative.md  05-stress-edge.md  README.md
university-agent/: .env.example  Dockerfile  config-example.yaml  config.yaml  pyproject.toml
university-agent/app/: config.py  logging_config.py  main.py  metrics.py
university-agent/app/agent/: callbacks.py  classifier.py  guardrails.py  mcp_loader.py  memory.py  prompts.py  react_agent.py  streaming.py
university-agent/app/agent/instructions/: abbreviations.example.md  code.example.md  safety.example.md  system.example.md
university-agent/app/middleware/: auth.py  request_id.py
university-agent/app/models/: database.py  schemas.py
university-agent/app/services/: celery_client.py  embedding_service.py  minio_service.py  postgres_service.py  qdrant_service.py  redis_service.py  token_counter.py
university-agent/app/tools/: ask_clarification.py  md_to_docx.py  search_kb.py  search_literature.py  search_web.py  think.py
university-agent/tests/: conftest.py
university-agent/tests/eval/: build_dataset.py  parse_questions.py  run_eval.py  run_eval_batch.py  run_eval_fast.py  run_eval_final.py  run_eval_fix.py  visualize.py
university-agent/tests/eval/output/: REPORT.md
university-agent/tests/integration/: test_api.py  test_middleware.py  test_services.py
university-agent/tests/smoke/: test_app_startup.py  test_imports.py
university-agent/tests/unit/: test_config.py  test_guardrails.py  test_mcp_loader.py  test_memory.py  test_react_agent.py  test_schemas.py  test_tools.py
web-gui/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
web-gui/app/: auth.py  config.py  main.py  metrics.py
web-gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
web-gui/frontend/src/: App.jsx  index.css
web-gui/frontend/src/api/: client.js
web-gui/frontend/src/components/: AgentSteps.jsx  AgentThoughts.jsx  Clarification.jsx  Composer.jsx  Files.jsx  Header.jsx  Login.jsx  Message.jsx  MessageList.jsx  Sidebar.jsx  Sources.jsx  Toast.jsx  Typing.jsx  Welcome.jsx
web-gui/frontend/src/hooks/: useAuth.js  useChat.js  useDialogs.js  useHealth.js  useToast.js
web-gui/frontend/src/lib/: audioDuration.js  codeCopy.js  commands.js  markdown.js  uploader.js  utils.js  voiceRecorder.js
web-gui/tests/: conftest.py  test_config.py  test_main.py
workers/: .dockerignore  .env.example  Dockerfile  pyproject.toml
workers/workers/: celery_app.py  config.py
workers/workers/tasks/: __init__.py  audio_convert.py  generate_doc.py  transcribe.py
