[project]
name = "unibot-log-viewer"
version = "0.1.0"
description = "Container log viewer for UniBot — streams Docker container logs to the browser via SSE"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "docker>=7.0.0",
    "pydantic-settings>=2.6.0",
    "prometheus-client>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
