[project]
name = "university-workers"
version = "0.1.0"
description = "Celery workers for UniBot: audio transcription, document generation"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "unibot-shared",
    "minio>=7.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "flower>=2.0.0",
]

[tool.uv.sources]
unibot-shared = { path = "../shared" }

[tool.hatch.build.targets.wheel]
packages = ["workers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
